--- a/index.html
+++ b/index.html
@@ -21,26 +21,11 @@
         <li><img src="https://www.themealdb.com/images/media/meals/0jv5gx1661040802.jpg" alt="Fettuccine Alfredo"><span>Fettuccine Alfredo</span></li>
         <li><img src="https://www.themealdb.com/images/media/meals/n7qnkb1630444129.jpg" alt="Chivito uruguayo"><span>Chivito uruguayo</span></li>
         <li><img src="https://www.themealdb.com/images/media/meals/u9l7k81628771647.jpg" alt="Walnut Roll Gužvara"><span>Walnut Roll Gužvara</span></li>
-        <li><img src="https://www.themealdb.com/images/media/meals/0jv5gx1661040802.jpg" alt="Fettuccine Alfredo"><span>Fettuccine Alfredo</span></li>
-        <li><img src="https://www.themealdb.com/images/media/meals/n7qnkb1630444129.jpg" alt="Chivito uruguayo"><span>Chivito uruguayo</span></li>
-        <li><img src="https://www.themealdb.com/images/media/meals/u9l7k81628771647.jpg" alt="Walnut Roll Gužvara"><span>Walnut Roll Gužvara</span></li>
+        <li><img src="https://www.themealdb.com/images/media/meals/tkxquw1628771028.jpg" alt="Burek"><span>Burek</span></li>
       </ul>
     </div>
-    <div class="meals">
-      <span class="random">
-        Random Recipe
-      </span>
-      <div class="meal">
-        <div class="meal-header">
-          <img src="https://www.themealdb.com/images/media/meals/nv5lf31628771380.jpg" alt="Fresh sardines">
-        </div>
-        <div class="meal-body">
-          <h4>Veggie Veggies</h4>
-          <button>
-            <i class="fa fa-heart"></i>           
-          </button>
-        </div>
-      </div>
+    <div class="meals" id="meals">
+      
     </div>
   </div>
 </body>
