--- a/index.html
+++ b/index.html
@@ -25,7 +25,20 @@
       </ul>
     </div>
     <div class="meals" id="meals">
-      
+      <!-- <div class="meal">
+        <div class="meal-header">
+          <span class="random">
+            Random Recipe
+          </span>
+          <img src="https://www.themealdb.com/images/media/meals/nv5lf31628771380.jpg" alt="Fresh sardines">
+        </div>
+        <div class="meal-body">
+          <h4>Fresh sardines</h4>
+          <button class="fav-btn">
+            <i class="fas fa-heart"></i>           
+          </button>
+        </div>
+      </div> -->
     </div>
   </div>
 </body>
